mistakes in code